RESOLVED FIXED155766
Non-const DocumentRuleSets::features() does not check default style version
https://bugs.webkit.org/show_bug.cgi?id=155766
Summary Non-const DocumentRuleSets::features() does not check default style version
Antti Koivisto
Reported 2016-03-22 13:45:59 PDT
This may leave it out of date when the default stylesheet expands.
Attachments
patch (2.17 KB, patch)
2016-03-22 13:52 PDT, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2016-03-22 13:52:02 PDT
Antti Koivisto
Comment 2 2016-03-22 14:31:39 PDT
Note You need to log in before you can comment on or make changes to this bug.