Non-const DocumentRuleSets::features() does not check default style version https://bugs.webkit.org/show_bug.cgi?id=155766

Reviewed by Andreas Kling.

This may leave it out of date when the default stylesheet expands.

No test, don't know how to hit this with current codebase. With some further optimizations
it starts affecting some tests involving UA media control stylesheets.

* css/DocumentRuleSets.h:
(WebCore::DocumentRuleSets::mutableFeatures):

    Check the default style version number in non-const case too.



Canonical link: https://commits.webkit.org/173869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198553 268f45cc-cd09-0410-ab3c-d52691b4dbfc